// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add stylelint 1`] = `
Object {
  "/.stylelintrc": "{
  \\"extends\\": \\"stylelint-config-standard\\",
  \\"rules\\": {
    \\"selector-pseudo-class-no-unknown\\": [
      true,
      {
        \\"ignorePseudoClasses\\": [
          \\"global\\"
        ]
      }
    ]
  }
}",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"test\\": \\"jest\\",
    \\"lint:css\\": \\"stylelint '**/*.css'\\",
    \\"pretest\\": \\"npm run lint:css\\"
  }
}",
}
`;

exports[`should install a custom preset 1`] = `
"{
  \\"extends\\": \\"stylelint-config-pizza\\",
  \\"rules\\": {
    \\"selector-pseudo-class-no-unknown\\": [
      true,
      {
        \\"ignorePseudoClasses\\": [
          \\"global\\"
        ]
      }
    ]
  }
}"
`;

exports[`should use custom extension 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"test\\": \\"jest\\",
    \\"lint:css\\": \\"stylelint '**/*.sass'\\",
    \\"pretest\\": \\"npm run lint:css\\"
  }
}"
`;
